# spok

./: .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml
docs/: DEVELOPMENT_HANDOFF.md  GROK_CLI_AND_AGENT_ORCHESTRATION_ROADMAP.md  HARNESS_AUDIT_AND_ROADMAP.md  LOW_OVERHEAD_DESKTOP_ARCHITECTURE.md  RELEASE_CHECKLIST.md  SECURITY_POSTURE.md  UI_UX_HARNESS_PLAN.md  UPDATER_AND_DESKTOP.md  UX_AUDIT.md
docs/checkpoints/: enterprise-p0p1-mission-2026-07-13.md
e2e/: permission-escalation.spec.ts  smoke.spec.ts  startup-and-lifecycle.spec.ts  trust-and-launch.spec.ts
playwright-report/: index.html
samples/: auth-refactor.sample.json
scripts/: dev-app.mjs  dev-lan.mjs  ensure-rust-path.ps1  lan-host.mjs  rename-server-handlers.mjs  test-spawn-prompt.mjs  verify-slash-catalog.mjs  with-rust.mjs
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: henry.w@example.net
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx
src/hooks/: use-git-watch.ts  use-host-session-sync.ts  use-mobile-layout.ts  use-mobile-live-watch.ts  use-mobile-session-lifecycle.ts  use-session-hydration.ts  use-theme.ts
src/lib/: attachments-client.ts  attachments.ts  automation-client.ts  background-runner.ts  causal-links.ts  desktop.ts  diagnostics.ts  diff-utils.ts  enterprise.ts  export-session.ts  extensions-client.ts  file-risk.ts  grok-commands.ts  grok-stream.ts  harness.ts  (+42 more)
(+284 files in other folders)
