[package]
name = "spok"
version = "0.1.0"
description = "Spok — Live Harness & Visualizer for Grok Build"
authors = ["xAI"]
edition = "2021"

[lib]
name = "spok_lib"
# Desktop-only: omit cdylib (causes "export ordinal too large" with MinGW/windows-gnu)
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
